# SFML-Game-Development-by-example

DVD_icon/: game.h  main.cpp  sfml-app  window.h
Event_Handler/: events.h  function_wrapper.h
Snake/: CMakeLists.txt
Snake/lib/: Game.h  Snake.h  Textbox.h  Window.h  World.h
Snake/src/: Game.cpp  Snake.cpp  Textbox.cpp  Window.cpp  World.cpp  main  main.cpp
